--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
     <!-- Scripts -->
     <script src="js/resize.js"></script>
+    <script src="js/frequencies/frequencies.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
